--- a/app/src/main/res/layout/activity_add_property.xml
+++ b/app/src/main/res/layout/activity_add_property.xml
@@ -31,7 +31,11 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/add_photo_btn"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        app:cornerRadius="20dp"
+        android:text="@string/add_photo_button_text"
+        style="@style/Widget.MaterialComponents.Button"/>
 
     <LinearLayout
         android:layout_width="match_parent"
