--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
 <resources>
     <dimen name="container_margin_top"> 10dp </dimen>
     <dimen name="margin_start_end"> 6dp </dimen>
+    <dimen name="nav_header_height">250dp</dimen>
 </resources>
