--- a/app/src/main/res/layout/activity_add_property.xml
+++ b/app/src/main/res/layout/activity_add_property.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 <LinearLayout
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -23,11 +23,12 @@
             android:id="@+id/property_photo_rcv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            tools:listitem="@layout/image_list_item"
-            android:orientation="horizontal"/>
+            android:orientation="horizontal"
+            tools:listitem="@layout/image_list_item" />
 
 
     </LinearLayout>
+
     <com.google.android.material.button.MaterialButton
         android:id="@+id/add_photo_btn"
         android:layout_width="wrap_content"
@@ -35,7 +36,8 @@
         android:layout_gravity="end"
         app:cornerRadius="20dp"
         android:text="@string/add_photo_button_text"
-        style="@style/Widget.MaterialComponents.Button"/>
+        style="@style/Widget.MaterialComponents.Button"
+        />
 
     <LinearLayout
         android:layout_width="match_parent"
