--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -20,25 +20,29 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <androidx.appcompat.widget.Toolbar
+            <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/homepage_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?actionBarSize"
+                android:background="?attr/colorPrimary"
                 android:theme="@style/ThemeOverlay.AppCompat.Dark"/>
 
             <FrameLayout
                 android:id="@+id/drawer_frame_layout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                />
         </LinearLayout>
 
         <com.google.android.material.navigation.NavigationView
             android:id="@+id/drawer_nav_view"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_gravity="start"
             app:headerLayout="@layout/drawer_nav_header"
             app:menu="@menu/drawer_nav_menu"
-            android:fitsSystemWindows="true"/>
+            android:fitsSystemWindows="true"
+            />
 
     </androidx.drawerlayout.widget.DrawerLayout>
 
