--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -23,6 +23,13 @@
             android:id="@+id/detail_img"
             android:layout_width="match_parent"
             android:layout_height="200dp"/>
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/update_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end"
+            android:text="UPDATE"
+            style="@style/Widget.MaterialComponents.Button"/>
         <TextView
             android:id="@+id/detail_price_txt"
             android:layout_width="match_parent"
