--- a/app/src/main/res/layout/update_activity_toolbar.xml
+++ b/app/src/main/res/layout/update_activity_toolbar.xml
@@ -7,4 +7,17 @@
     android:background="?attr/colorPrimary"
     android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/image_selected_counter"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#ffffff"
+            android:textSize="20dp"/>
+
+    </RelativeLayout>
+
 </com.google.android.material.appbar.MaterialToolbar>
