--- a/app/src/main/res/layout/activity_add_property.xml
+++ b/app/src/main/res/layout/activity_add_property.xml
@@ -9,8 +9,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_marginLeft="@dimen/margin_start_end"
-    android:layout_marginRight="@dimen/margin_start_end"
+    android:layout_marginLeft="@dimen/container_margin_start_end"
+    android:layout_marginRight="@dimen/container_margin_start_end"
     android:layout_marginBottom="@dimen/container_margin_top"
     tools:context=".Controllers.Activities.AddPropertyActivity">
 
@@ -34,6 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
+        android:layout_marginTop="@dimen/widget_margin_top"
         app:cornerRadius="20dp"
         android:text="@string/add_photo_button_text"
         style="@style/Widget.MaterialComponents.Button"
@@ -135,6 +136,20 @@
             android:hint="@string/property_address"
             android:inputType="textPostalAddress"/>
 
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/property_city_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/property_city"
+            android:inputType="text"/>
     </com.google.android.material.textfield.TextInputLayout>
 
    <TextView
