--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -5,6 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginLeft="@dimen/container_margin_start_end"
+    android:layout_marginRight="@dimen/container_margin_start_end"
     android:orientation="vertical"
 
     >
@@ -12,8 +14,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:layout_marginTop="50dp"
+        android:orientation="vertical"
+        android:layout_marginBottom="@dimen/container_margin_top"
         >
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,7 +26,8 @@
         <ImageView
             android:id="@+id/detail_img"
             android:layout_width="match_parent"
-            android:layout_height="200dp"/>
+            android:layout_height="200dp"
+            android:layout_marginTop="@dimen/container_margin_top"/>
         <com.google.android.material.button.MaterialButton
             android:id="@+id/update_btn"
             android:layout_width="wrap_content"
@@ -32,11 +36,11 @@
             android:text="UPDATE"
             style="@style/Widget.MaterialComponents.Button"/>
         <TextView
-            android:id="@+id/detail_price_txt"
+            android:id="@+id/detail_type_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <TextView
-            android:id="@+id/detail_type_txt"
+            android:id="@+id/detail_price_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <TextView
