--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -5,8 +5,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="@dimen/container_margin_top"
+    android:layout_marginRight="@dimen/container_margin_start_end"
+    android:layout_marginLeft="@dimen/container_margin_start_end"
     android:orientation="vertical"
-    android:background="@color/colorAccent"
     tools:context=".Controllers.Fragments.HomePageFragment">
 
     <LinearLayout
@@ -20,14 +22,15 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/widgets_height"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/search_address_txt"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:hint="@string/property_city"/>
 
         </com.google.android.material.textfield.TextInputLayout>
     <LinearLayout
@@ -37,7 +40,7 @@
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/widgets_height"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
             app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">
 
@@ -45,6 +48,7 @@
                 android:id="@+id/search_type_atc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:hint="@string/property_type"
                 android:textStyle="bold"
                 android:textColor="#000000"/>
 
@@ -53,14 +57,15 @@
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/widgets_height"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/search_date_txt"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:hint="@string/sale_date"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -74,21 +79,22 @@
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/widgets_height"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/minPrice"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
+                android:layout_height="wrap_content"
+                android:hint="@string/min_price"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/widgets_height"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">
 
@@ -96,6 +102,7 @@
                 android:id="@+id/maxPrice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:hint="@string/max_price"
                 />
 
 
@@ -111,7 +118,7 @@
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/widgets_height"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">
 
@@ -119,6 +126,7 @@
                 android:id="@+id/minSurface"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:hint="@string/min_surface"
                 android:inputType="number"/>
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -126,7 +134,7 @@
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/widgets_height"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
             >
@@ -135,6 +143,7 @@
                 android:id="@+id/maxSurface"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:hint="@string/max_surface"
                 android:inputType="number"/>
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -142,7 +151,7 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/widgets_height"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">
 
@@ -150,6 +159,7 @@
             android:id="@+id/rooms_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:hint="@string/rooms_number"
             android:inputType="number"/>
 
     </com.google.android.material.textfield.TextInputLayout>
@@ -159,6 +169,11 @@
         android:id="@+id/search_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/widget_margin_top"
+        android:text="@string/search_btn"
+        app:cornerRadius="@dimen/btn_corner_radius"
+        android:gravity="center"
+        android:layout_gravity="center"
         style="@style/Widget.MaterialComponents.Button"/>
 
     </LinearLayout>
@@ -168,6 +183,7 @@
     android:id="@+id/property_rcv"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginTop="@dimen/container_margin_top"
     app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
     tools:listitem="@layout/property_list_items"/>
 
