--- a/app/src/main/res/layout/image_list_item.xml
+++ b/app/src/main/res/layout/image_list_item.xml
@@ -21,8 +21,8 @@
 
         <ImageView
             android:id="@+id/image_item_img"
-            android:layout_height="90dp"
-            android:layout_width="90dp"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
             android:layout_gravity="center_horizontal"
             android:src="@drawable/ic_baseline_home_work_24"
             />
