--- a/app/src/main/res/layout/photos_list_item.xml
+++ b/app/src/main/res/layout/photos_list_item.xml
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="250dp"
+        android:layout_marginLeft="@dimen/container_margin_start_end"
+        android:layout_marginRight="@dimen/container_margin_start_end"
+        android:layout_marginTop="@dimen/container_margin_top"
         app:cardCornerRadius="4dp"
         app:cardMaxElevation="2dp"
         app:cardElevation="1dp"
-        android:layout_centerInParent="true">
+        >
 
         <ImageView
             android:id="@+id/photo_item_img"
-            android:layout_height="90dp"
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:src="@drawable/ic_baseline_home_work_24"
+
             />
 
     </androidx.cardview.widget.CardView>
