--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="container_margin_top"> 10dp </dimen>
-    <dimen name="margin_start_end"> 6dp </dimen>
+    <dimen name="container_margin_top"> 15dp </dimen>
+    <dimen name="container_margin_start_end"> 10dp </dimen>
+    <dimen name="widget_margin_top"> 10dp </dimen>
+    <dimen name="btn_corner_radius"> 20dp</dimen>
+    <dimen name="widgets_height"> 50dp </dimen>
     <dimen name="nav_header_height">250dp</dimen>
+
 </resources>
