--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:map="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -16,18 +16,19 @@
         android:layout_height="match_parent"
         android:layout_marginTop="50dp"
         android:orientation="vertical"
-        android:layout_marginBottom="@dimen/container_margin_top"
         >
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="3"
         android:orientation="vertical">
 
         <ImageView
             android:id="@+id/detail_img"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:layout_marginTop="@dimen/container_margin_top"/>
+            android:layout_height="230dp"
+            android:layout_marginTop="@dimen/container_margin_top"
+            android:src="@drawable/ic_baseline_home_work_24"/>
         <com.google.android.material.button.MaterialButton
             android:id="@+id/update_btn"
             android:layout_width="wrap_content"
@@ -68,7 +69,8 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         >
         <fragment
             android:id="@+id/map"
@@ -85,4 +87,4 @@
     </LinearLayout>
 
 
-</FrameLayout>
+</LinearLayout>
