--- a/app/src/main/res/layout/activity_add_property.xml
+++ b/app/src/main/res/layout/activity_add_property.xml
@@ -5,6 +5,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
+    
+ <androidx.coordinatorlayout.widget.CoordinatorLayout
+     android:layout_width="match_parent"
+     android:layout_height="match_parent" >
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -29,16 +33,6 @@
 
     </LinearLayout>
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/add_photo_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:layout_marginTop="@dimen/widget_margin_top"
-        app:cornerRadius="20dp"
-        android:text="@string/add_photo_button_text"
-        style="@style/Widget.MaterialComponents.Button"
-        />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -138,19 +132,6 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/property_city_txt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/property_city"
-            android:inputType="text"/>
-    </com.google.android.material.textfield.TextInputLayout>
 
    <TextView
        android:layout_width="match_parent"
@@ -346,13 +327,27 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/save_add_btn"
+        style="@style/Widget.MaterialComponents.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/Widget.MaterialComponents.Button"
         android:layout_gravity="center_horizontal"
-        app:cornerRadius="20dp"
-        android:text="@string/save_button_text"
-        android:enabled="true"/>
+        android:enabled="true"
+        app:icon="@drawable/ic_baseline_add_24"
+        app:cornerRadius="20dp" />
 
 </LinearLayout>
+     <com.google.android.material.floatingactionbutton.FloatingActionButton
+         android:id="@+id/add_photo_fab"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:src="@drawable/ic_baseline_add_a_photo_24"
+         app:layout_anchor="@id/property_photo_rcv"
+         app:layout_anchorGravity="bottom|right|end"
+         android:backgroundTint="@color/icon_tint_color"
+         android:tint="@color/drawer_text_color"
+         android:layout_margin="15dp"
+         style="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+         android:clickable="true"/>
+
+ </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </ScrollView>
