--- a/app/src/main/res/layout/activity_update_property.xml
+++ b/app/src/main/res/layout/activity_update_property.xml
@@ -141,20 +141,6 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/update_property_city_txt"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/property_city"
-                android:inputType="text"/>
-
-        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
             android:layout_width="match_parent"
@@ -310,7 +296,7 @@
                 style="@style/Widget.MaterialComponents.Chip.Choice"
                 android:text="@string/sold_status"
                 android:textAlignment="center"
-                android:checked="true"
+                android:checked="false"
                 app:chipStrokeWidth="1dp"
                 android:layout_gravity="center_horizontal" />
 
