--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="@dimen/container_margin_top"
+    android:layout_marginTop="5dp"
     android:layout_marginRight="@dimen/container_margin_start_end"
     android:layout_marginLeft="@dimen/container_margin_start_end"
     android:orientation="vertical"
@@ -15,57 +15,68 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/widgets_height"
+            android:layout_height="50dp"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">
+            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/search_address_txt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/property_city"/>
+                android:paddingBottom="0dp"
+                android:hint="@string/property_city"
+                android:drawableEnd="@drawable/ic_baseline_search_24"
+                android:focusable="false"/>
 
         </com.google.android.material.textfield.TextInputLayout>
+
     <LinearLayout
+        android:id="@+id/search_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:orientation="vertical">
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="55dp"
         android:orientation="horizontal">
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="@dimen/widgets_height"
+            android:layout_height="wrap_content"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
-            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">
+            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">
 
             <AutoCompleteTextView
                 android:id="@+id/search_type_atc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textSize="17dp"
                 android:hint="@string/property_type"
-                android:textStyle="bold"
-                android:textColor="#000000"/>
+                android:textColor="#000000"
+                android:visibility="gone"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="@dimen/widgets_height"
+            android:layout_height="wrap_content"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">
+            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/search_date_txt"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/sale_date"/>
+                android:paddingBottom="5dp"
+                android:textSize="17dp"
+                android:hint="@string/sale_date" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -73,20 +84,22 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:orientation="horizontal">
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="@dimen/widgets_height"
+            android:layout_height="wrap_content"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">
+            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/minPrice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingBottom="5dp"
+                android:textSize="17dp"
                 android:hint="@string/min_price"/>
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -94,14 +107,16 @@
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="@dimen/widgets_height"
+            android:layout_height="wrap_content"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">
+            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/maxPrice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingBottom="5dp"
+                android:textSize="17dp"
                 android:hint="@string/max_price"
                 />
 
@@ -112,20 +127,22 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="55dp"
         android:orientation="horizontal">
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="@dimen/widgets_height"
+            android:layout_height="wrap_content"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">
+            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/minSurface"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingBottom="5dp"
+                android:textSize="17dp"
                 android:hint="@string/min_surface"
                 android:inputType="number"/>
 
@@ -134,15 +151,17 @@
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="@dimen/widgets_height"
+            android:layout_height="wrap_content"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium"
+            app:hintTextAppearance="@style/TextAppearance.AppCompat.Small"
             >
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/maxSurface"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingBottom="5dp"
+                android:textSize="17dp"
                 android:hint="@string/max_surface"
                 android:inputType="number"/>
 
@@ -151,14 +170,16 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/widgets_height"
+        android:layout_height="55dp"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium">
+        app:hintTextAppearance="@style/TextAppearance.AppCompat.Small">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/rooms_number"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingBottom="5dp"
+            android:textSize="17dp"
             android:hint="@string/rooms_number"
             android:inputType="number"/>
 
@@ -178,20 +199,24 @@
 
     </LinearLayout>
 
-
-<androidx.recyclerview.widget.RecyclerView
-    android:id="@+id/property_rcv"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_marginTop="@dimen/container_margin_top"
-    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-    tools:listitem="@layout/property_list_items"/>
-
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/property_rcv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="@dimen/container_margin_top"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/property_list_items"/>
     </LinearLayout>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add_fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="15dp"
+        android:backgroundTint="@color/icon_container_color"
+        android:tint="@color/icon_tint_color"
+        android:clickable="true"
+        android:src="@drawable/ic_baseline_add_home_24" />
 
-
-
-
-
-</LinearLayout>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
