--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
+    <color name="colorPrimary">#03A9F4</color>
+    <color name="colorPrimaryDark">#0287c3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="drawer_nav_header_color">#B2B9E1</color>
     <color name="drawer_text_color">#ffffff</color>
+    <color name="icon_container_color">#fffdf4</color>
+    <color name="icon_ripple_color">#923a08</color>
+    <color name="icon_tint_color">#00a8f3</color>
 </resources>
