--- a/app/src/main/res/layout/activity_update_property.xml
+++ b/app/src/main/res/layout/activity_update_property.xml
@@ -39,6 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             app:cornerRadius="20dp"
+            android:layout_marginEnd="30dp"
             android:text="@string/add_photo_button_text"
             style="@style/Widget.MaterialComponents.Button"
             />
