--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="icon_container_color">#fffdf4</color>
     <color name="icon_ripple_color">#923a08</color>
     <color name="icon_tint_color">#00a8f3</color>
+    <color name="description_background"> #f6e7de </color>
 </resources>
